agregue links internos

--- a/index2.html
+++ b/index2.html
@@ -17,8 +17,8 @@
             </div>
             <ul class="menu">
                 <li><a class="active" href="#">Inicio</a></li>
-                <li><a href="#">Sobre mi</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="#sobreMi">Sobre mi</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
             </nav>
@@ -42,7 +42,7 @@
         <img class="img2" src="/home/usuario/Escritorio/programacion/portfolio personal/imagenes/seguridad-informatica" alt="seguridad informatica">
         
             <div class="info">
-                <h2>Sobre mi</h2>
+                <h2 id="sobreMi">Sobre mi</h2>
                 <div class="divider"></div>
                     <p> Estudiante de Developer, con un gran interés en Seguridad Informatica e Intelgencia Artificial. Con capacidad para aprender y aplicar mis conocimientos al ámbito profesional. En busca de una oportunidad laboral en la que desarrollar mis habilidades y adquirir experiencia.</p>
                     <p>Comprendo con claridad HTML y CSS, y tengo 
@@ -55,7 +55,7 @@
     </div>    
             <div class="portfolio">
                 <div class="portfolio-head">
-                    <h2>Mi Portfolio</h2>
+                    <h2 id="portfolio">Mi Portfolio</h2>
                     <div class="mi-portfolio"></div>
                 </div>
 
